--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="font-montserrat text-sm bg-white dark:bg-zinc-900">
+<body class="text-sm bg-background text-foreground">
   <app-root></app-root>
 </body>
 
