--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://image.tmdb.org">
+  <meta name="description" content="Browse and discover animated movies with NgAnimation, an Angular app showcasing popular films and detailed media content." />
 </head>
 
 <body class="text-sm bg-background text-foreground">
